// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TrsCalculationControlComponent should display contribution values and total when in preview mode 1`] = `
<pf-trs-calculation-control
  MAX_VISIBLE_FIELDS={[Function Number]}
  consolidated={[Function Number]}
  controlData={[Function Object]}
  currencyPipe={[Function Object]}
  employeeRewardsData={[Function Object]}
  maxVisibleFieldsReached="false"
  mode={[Function Number]}
  onCompFieldAdded={[Function EventEmitter]}
  onCompFieldRemoved={[Function EventEmitter]}
  onCompFieldTitleChange={[Function EventEmitter]}
  onTitleChange={[Function EventEmitter]}
  onUpdateSummaryTitleChange={[Function EventEmitter]}
>
  <div
    class="trs-calculation py-2 px-3"
    pfmodeclassifierdirective=""
  >
    <table
      class="table table-borderless table-sm mb-0 w-100"
    >
      <colgroup>
        <col
          class="field-column"
        />
        <col
          class="contribution-column"
        />
        
      </colgroup>
      <thead>
        <tr
          class="trs-calculation-row w-100"
        >
          <th
            class="font-weight-normal"
            scope="col"
          >
            
            <h4
              class="primary-control-heading mb-1"
            >
              <pf-string-editor>
                
                <span
                  class="wrapper w-100 d-inline-block"
                >
                  <span>
                    Cash Compensation
                  </span>
                </span>
                
              </pf-string-editor>
            </h4>
          </th>
          <th
            class="secondary-header align-middle text-right font-weight-normal"
            scope="col"
          >
            
            <span>
              Contribution
            </span>
          </th>
          
        </tr>
      </thead>
      <tbody>
        
        <tr
          class="trs-calculation-row w-100"
        >
          
          <td>
            <pf-string-editor>
              
              <span
                class="wrapper w-100 d-inline-block"
              >
                <span>
                  Base Salary
                </span>
              </span>
              
            </pf-string-editor>
          </td>
          <td
            class="contribution-field text-right preview-mode-animation"
          >
            
            <span>
              150000
            </span>
          </td>
          
          
          
        </tr>
        <tr
          class="trs-calculation-row w-100"
        >
          
          <td>
            <pf-string-editor>
              
              <span
                class="wrapper w-100 d-inline-block"
              >
                <span>
                  Bonus
                </span>
              </span>
              
            </pf-string-editor>
          </td>
          <td
            class="contribution-field text-right preview-mode-animation"
          >
            
            <span>
              10000
            </span>
          </td>
          
          
          
        </tr>
        <tr
          class="trs-calculation-row w-100"
        >
          
          <td
            class="last-before-summary"
          >
            <pf-string-editor>
              
              <span
                class="wrapper w-100 d-inline-block"
              >
                <span>
                  Short Term Incentive
                </span>
              </span>
              
            </pf-string-editor>
          </td>
          <td
            class="contribution-field text-right preview-mode-animation"
          >
            
            <span>
              5000
            </span>
          </td>
          
          
          
        </tr>
        <tr
          class="trs-calculation-row w-100"
        >
          <td
            class="summary"
            pfstatementgraphicsdirective=""
          >
            <pf-string-editor>
              
              <span
                class="wrapper w-100 d-inline-block"
              >
                <span>
                  
                </span>
              </span>
              
            </pf-string-editor>
          </td>
          <td
            class="contribution-field summary text-right preview-mode-animation"
          >
            
            <span>
              165000
            </span>
          </td>
          
        </tr>
      </tbody>
    </table>
    
    
  </div>
</pf-trs-calculation-control>
`;

exports[`TrsCalculationControlComponent should exclude fields in preview mode if employee data is 0 for a given field 1`] = `
<pf-trs-calculation-control
  MAX_VISIBLE_FIELDS={[Function Number]}
  consolidated={[Function Number]}
  controlData={[Function Object]}
  currencyPipe={[Function Object]}
  employeeRewardsData={[Function Object]}
  maxVisibleFieldsReached="false"
  mode={[Function Number]}
  onCompFieldAdded={[Function EventEmitter]}
  onCompFieldRemoved={[Function EventEmitter]}
  onCompFieldTitleChange={[Function EventEmitter]}
  onTitleChange={[Function EventEmitter]}
  onUpdateSummaryTitleChange={[Function EventEmitter]}
>
  <div
    class="trs-calculation py-2 px-3"
    pfmodeclassifierdirective=""
  >
    <table
      class="table table-borderless table-sm mb-0 w-100"
    >
      <colgroup>
        <col
          class="field-column"
        />
        <col
          class="contribution-column"
        />
        
      </colgroup>
      <thead>
        <tr
          class="trs-calculation-row w-100"
        >
          <th
            class="font-weight-normal"
            scope="col"
          >
            
            <h4
              class="primary-control-heading mb-1"
            >
              <pf-string-editor>
                
                <span
                  class="wrapper w-100 d-inline-block"
                >
                  <span>
                    Cash Compensation
                  </span>
                </span>
                
              </pf-string-editor>
            </h4>
          </th>
          <th
            class="secondary-header align-middle text-right font-weight-normal"
            scope="col"
          >
            
            <span>
              Contribution
            </span>
          </th>
          
        </tr>
      </thead>
      <tbody>
        
        <tr
          class="trs-calculation-row w-100"
        >
          
          <td>
            <pf-string-editor>
              
              <span
                class="wrapper w-100 d-inline-block"
              >
                <span>
                  Base Salary
                </span>
              </span>
              
            </pf-string-editor>
          </td>
          <td
            class="contribution-field text-right preview-mode-animation"
          >
            
            <span>
              150000
            </span>
          </td>
          
          
          
        </tr>
        <tr
          class="trs-calculation-row w-100"
        >
          
          <td>
            <pf-string-editor>
              
              <span
                class="wrapper w-100 d-inline-block"
              >
                <span>
                  Bonus
                </span>
              </span>
              
            </pf-string-editor>
          </td>
          <td
            class="contribution-field text-right preview-mode-animation"
          >
            
            <span>
              10000
            </span>
          </td>
          
          
          
        </tr>
        <tr
          class="trs-calculation-row w-100"
        >
          
          
        </tr>
        <tr
          class="trs-calculation-row w-100"
        >
          <td
            class="summary"
            pfstatementgraphicsdirective=""
          >
            <pf-string-editor>
              
              <span
                class="wrapper w-100 d-inline-block"
              >
                <span>
                  
                </span>
              </span>
              
            </pf-string-editor>
          </td>
          <td
            class="contribution-field summary text-right preview-mode-animation"
          >
            
            <span>
              160000
            </span>
          </td>
          
        </tr>
      </tbody>
    </table>
    
    
  </div>
</pf-trs-calculation-control>
`;

exports[`TrsCalculationControlComponent should exclude fields in preview mode if employee data is null for a given field 1`] = `
<pf-trs-calculation-control
  MAX_VISIBLE_FIELDS={[Function Number]}
  consolidated={[Function Number]}
  controlData={[Function Object]}
  currencyPipe={[Function Object]}
  employeeRewardsData={[Function Object]}
  maxVisibleFieldsReached="false"
  mode={[Function Number]}
  onCompFieldAdded={[Function EventEmitter]}
  onCompFieldRemoved={[Function EventEmitter]}
  onCompFieldTitleChange={[Function EventEmitter]}
  onTitleChange={[Function EventEmitter]}
  onUpdateSummaryTitleChange={[Function EventEmitter]}
>
  <div
    class="trs-calculation py-2 px-3"
    pfmodeclassifierdirective=""
  >
    <table
      class="table table-borderless table-sm mb-0 w-100"
    >
      <colgroup>
        <col
          class="field-column"
        />
        <col
          class="contribution-column"
        />
        
      </colgroup>
      <thead>
        <tr
          class="trs-calculation-row w-100"
        >
          <th
            class="font-weight-normal"
            scope="col"
          >
            
            <h4
              class="primary-control-heading mb-1"
            >
              <pf-string-editor>
                
                <span
                  class="wrapper w-100 d-inline-block"
                >
                  <span>
                    Cash Compensation
                  </span>
                </span>
                
              </pf-string-editor>
            </h4>
          </th>
          <th
            class="secondary-header align-middle text-right font-weight-normal"
            scope="col"
          >
            
            <span>
              Contribution
            </span>
          </th>
          
        </tr>
      </thead>
      <tbody>
        
        <tr
          class="trs-calculation-row w-100"
        >
          
          <td>
            <pf-string-editor>
              
              <span
                class="wrapper w-100 d-inline-block"
              >
                <span>
                  Base Salary
                </span>
              </span>
              
            </pf-string-editor>
          </td>
          <td
            class="contribution-field text-right preview-mode-animation"
          >
            
            <span>
              150000
            </span>
          </td>
          
          
          
        </tr>
        <tr
          class="trs-calculation-row w-100"
        >
          
          <td>
            <pf-string-editor>
              
              <span
                class="wrapper w-100 d-inline-block"
              >
                <span>
                  Bonus
                </span>
              </span>
              
            </pf-string-editor>
          </td>
          <td
            class="contribution-field text-right preview-mode-animation"
          >
            
            <span>
              10000
            </span>
          </td>
          
          
          
        </tr>
        <tr
          class="trs-calculation-row w-100"
        >
          
          
        </tr>
        <tr
          class="trs-calculation-row w-100"
        >
          <td
            class="summary"
            pfstatementgraphicsdirective=""
          >
            <pf-string-editor>
              
              <span
                class="wrapper w-100 d-inline-block"
              >
                <span>
                  
                </span>
              </span>
              
            </pf-string-editor>
          </td>
          <td
            class="contribution-field summary text-right preview-mode-animation"
          >
            
            <span>
              160000
            </span>
          </td>
          
        </tr>
      </tbody>
    </table>
    
    
  </div>
</pf-trs-calculation-control>
`;

exports[`TrsCalculationControlComponent should hide all content in the table head when ShowTitle is false 1`] = `
<pf-trs-calculation-control
  MAX_VISIBLE_FIELDS={[Function Number]}
  consolidated={[Function Number]}
  controlData={[Function Object]}
  currencyPipe={[Function Object]}
  employeeRewardsData={[Function Object]}
  maxVisibleFieldsReached="false"
  mode={[Function Number]}
  onCompFieldAdded={[Function EventEmitter]}
  onCompFieldRemoved={[Function EventEmitter]}
  onCompFieldTitleChange={[Function EventEmitter]}
  onTitleChange={[Function EventEmitter]}
  onUpdateSummaryTitleChange={[Function EventEmitter]}
>
  <div
    class="trs-calculation py-2 px-3"
    pfmodeclassifierdirective=""
  >
    <table
      class="table table-borderless table-sm mb-0 w-100"
    >
      <colgroup>
        <col
          class="field-column"
        />
        <col
          class="contribution-column"
        />
        
      </colgroup>
      <thead>
        <tr
          class="trs-calculation-row w-100"
        >
          <th
            class="font-weight-normal"
            scope="col"
          >
            
          </th>
          <th
            class="secondary-header align-middle text-right font-weight-normal"
            scope="col"
          >
            
          </th>
          
        </tr>
      </thead>
      <tbody>
        
        <tr
          class="trs-calculation-row w-100"
        >
          
          
        </tr>
        <tr
          class="trs-calculation-row w-100 faux-title"
        >
          <td
            class="summary"
            pfstatementgraphicsdirective=""
          >
            <pf-string-editor>
              
              <span
                class="wrapper w-100 d-inline-block"
              >
                <span>
                  
                </span>
              </span>
              
            </pf-string-editor>
          </td>
          <td
            class="contribution-field summary text-right preview-mode-animation"
          >
            
            <pf-compensation-value-placeholder />
          </td>
          
        </tr>
      </tbody>
    </table>
    
    
  </div>
</pf-trs-calculation-control>
`;

exports[`TrsCalculationControlComponent should render additional content in the table head when ShowTitle is true 1`] = `
<pf-trs-calculation-control
  MAX_VISIBLE_FIELDS={[Function Number]}
  consolidated={[Function Number]}
  controlData={[Function Object]}
  currencyPipe={[Function Object]}
  employeeRewardsData={[Function Object]}
  maxVisibleFieldsReached="false"
  mode={[Function Number]}
  onCompFieldAdded={[Function EventEmitter]}
  onCompFieldRemoved={[Function EventEmitter]}
  onCompFieldTitleChange={[Function EventEmitter]}
  onTitleChange={[Function EventEmitter]}
  onUpdateSummaryTitleChange={[Function EventEmitter]}
>
  <div
    class="trs-calculation py-2 px-3"
    pfmodeclassifierdirective=""
  >
    <table
      class="table table-borderless table-sm mb-0 w-100"
    >
      <colgroup>
        <col
          class="field-column"
        />
        <col
          class="contribution-column"
        />
        
      </colgroup>
      <thead>
        <tr
          class="trs-calculation-row w-100"
        >
          <th
            class="font-weight-normal"
            scope="col"
          >
            
            <h4
              class="primary-control-heading mb-1"
            >
              <pf-string-editor>
                
                <span
                  class="wrapper w-100 d-inline-block"
                >
                  <span>
                    test title
                  </span>
                </span>
                
              </pf-string-editor>
            </h4>
          </th>
          <th
            class="secondary-header align-middle text-right font-weight-normal"
            scope="col"
          >
            
            <span>
              Contribution
            </span>
          </th>
          
        </tr>
      </thead>
      <tbody>
        
        <tr
          class="trs-calculation-row w-100"
        >
          
          
        </tr>
        <tr
          class="trs-calculation-row w-100"
        >
          <td
            class="summary"
            pfstatementgraphicsdirective=""
          >
            <pf-string-editor>
              
              <span
                class="wrapper w-100 d-inline-block"
              >
                <span>
                  
                </span>
              </span>
              
            </pf-string-editor>
          </td>
          <td
            class="contribution-field summary text-right preview-mode-animation"
          >
            
            <pf-compensation-value-placeholder />
          </td>
          
        </tr>
      </tbody>
    </table>
    
    
  </div>
</pf-trs-calculation-control>
`;

exports[`TrsCalculationControlComponent should render the supplied Summary 1`] = `
<pf-trs-calculation-control
  MAX_VISIBLE_FIELDS={[Function Number]}
  consolidated={[Function Number]}
  controlData={[Function Object]}
  currencyPipe={[Function Object]}
  maxVisibleFieldsReached="false"
  mode="0"
  onCompFieldAdded={[Function EventEmitter]}
  onCompFieldRemoved={[Function EventEmitter]}
  onCompFieldTitleChange={[Function EventEmitter]}
  onTitleChange={[Function EventEmitter]}
  onUpdateSummaryTitleChange={[Function EventEmitter]}
>
  <div
    class="trs-calculation py-2 px-3"
    pfmodeclassifierdirective=""
  >
    <table
      class="table table-borderless table-sm mb-0 w-100"
    >
      <colgroup>
        <col
          class="field-column"
        />
        <col
          class="contribution-column"
        />
        
        <col
          class="button-column"
        />
      </colgroup>
      <thead>
        <tr
          class="trs-calculation-row w-100"
        >
          <th
            class="font-weight-normal"
            scope="col"
          >
            
          </th>
          <th
            class="secondary-header align-middle text-right font-weight-normal"
            scope="col"
          >
            
          </th>
          
          <th
            scope="col"
          />
        </tr>
      </thead>
      <tbody>
        
        <tr
          class="trs-calculation-row w-100 faux-title"
        >
          <td
            class="summary"
            pfstatementgraphicsdirective=""
          >
            <pf-string-editor>
              
              <span
                class="wrapper w-100 d-inline-block"
              >
                <input
                  class="input-text w-100 offScreen"
                  maxlength="30"
                  minlength="1"
                  placeholder="test summary"
                  tabindex="-1"
                  type="text"
                />
                
                <a
                  class="editable d-flex show-icon-on-hover"
                  href="javascript:void(0)"
                >
                  <span
                    class="edit-text d-inline-block mw-100"
                  >
                    test summary
                  </span>
                  <span
                    class="edit-icon position-relative"
                  >
                    <fa-icon
                      aria-hidden="true"
                      class="fa-xs ml-2"
                    />
                  </span>
                </a>
              </span>
              
            </pf-string-editor>
          </td>
          <td
            class="contribution-field summary text-right"
          >
            
            <pf-compensation-value-placeholder />
          </td>
          
          <td />
        </tr>
      </tbody>
    </table>
    
    
  </div>
</pf-trs-calculation-control>
`;

exports[`TrsCalculationControlComponent should render the supplied data fields 1`] = `
<pf-trs-calculation-control
  MAX_VISIBLE_FIELDS={[Function Number]}
  consolidated={[Function Number]}
  controlData={[Function Object]}
  currencyPipe={[Function Object]}
  employeeRewardsData={[Function Object]}
  maxVisibleFieldsReached="false"
  mode="0"
  onCompFieldAdded={[Function EventEmitter]}
  onCompFieldRemoved={[Function EventEmitter]}
  onCompFieldTitleChange={[Function EventEmitter]}
  onTitleChange={[Function EventEmitter]}
  onUpdateSummaryTitleChange={[Function EventEmitter]}
>
  <div
    class="trs-calculation py-2 px-3"
    pfmodeclassifierdirective=""
  >
    <table
      class="table table-borderless table-sm mb-0 w-100"
    >
      <colgroup>
        <col
          class="field-column"
        />
        <col
          class="contribution-column"
        />
        
        <col
          class="button-column"
        />
      </colgroup>
      <thead>
        <tr
          class="trs-calculation-row w-100"
        >
          <th
            class="font-weight-normal"
            scope="col"
          >
            
          </th>
          <th
            class="secondary-header align-middle text-right font-weight-normal"
            scope="col"
          >
            
          </th>
          
          <th
            scope="col"
          />
        </tr>
      </thead>
      <tbody>
        
        <tr
          class="trs-calculation-row w-100"
        >
          
          <td>
            <pf-string-editor>
              
              <span
                class="wrapper w-100 d-inline-block"
              >
                <input
                  class="input-text w-100 offScreen"
                  maxlength="30"
                  minlength="1"
                  placeholder="First"
                  tabindex="-1"
                  type="text"
                />
                
                <a
                  class="editable d-flex show-icon-on-hover"
                  href="javascript:void(0)"
                >
                  <span
                    class="edit-text d-inline-block mw-100"
                  >
                    First
                  </span>
                  <span
                    class="edit-icon position-relative"
                  >
                    <fa-icon
                      aria-hidden="true"
                      class="fa-xs ml-2"
                    />
                  </span>
                </a>
              </span>
              
            </pf-string-editor>
          </td>
          <td
            class="contribution-field text-right"
          >
            
            <pf-compensation-value-placeholder />
          </td>
          
          <td>
            <button
              class="remove-btn btn btn-sm btn-outline-danger"
              type="button"
            >
              <fa-icon
                class="fa-sm"
              />
            </button>
          </td>
          
          
        </tr>
        <tr
          class="trs-calculation-row w-100"
        >
          
          <td>
            <pf-string-editor>
              
              <span
                class="wrapper w-100 d-inline-block"
              >
                <input
                  class="input-text w-100 offScreen"
                  maxlength="30"
                  minlength="1"
                  placeholder="Second"
                  tabindex="-1"
                  type="text"
                />
                
                <a
                  class="editable d-flex show-icon-on-hover"
                  href="javascript:void(0)"
                >
                  <span
                    class="edit-text d-inline-block mw-100"
                  >
                    Second
                  </span>
                  <span
                    class="edit-icon position-relative"
                  >
                    <fa-icon
                      aria-hidden="true"
                      class="fa-xs ml-2"
                    />
                  </span>
                </a>
              </span>
              
            </pf-string-editor>
          </td>
          <td
            class="contribution-field text-right"
          >
            
            <pf-compensation-value-placeholder />
          </td>
          
          <td>
            <button
              class="remove-btn btn btn-sm btn-outline-danger"
              type="button"
            >
              <fa-icon
                class="fa-sm"
              />
            </button>
          </td>
          
          
        </tr>
        <tr
          class="trs-calculation-row w-100"
        >
          
          <td
            class="last-before-summary"
          >
            <pf-string-editor>
              
              <span
                class="wrapper w-100 d-inline-block"
              >
                <input
                  class="input-text w-100 offScreen"
                  maxlength="30"
                  minlength="1"
                  placeholder="Third"
                  tabindex="-1"
                  type="text"
                />
                
                <a
                  class="editable d-flex show-icon-on-hover"
                  href="javascript:void(0)"
                >
                  <span
                    class="edit-text d-inline-block mw-100"
                  >
                    Third
                  </span>
                  <span
                    class="edit-icon position-relative"
                  >
                    <fa-icon
                      aria-hidden="true"
                      class="fa-xs ml-2"
                    />
                  </span>
                </a>
              </span>
              
            </pf-string-editor>
          </td>
          <td
            class="contribution-field text-right"
          >
            
            <pf-compensation-value-placeholder />
          </td>
          
          <td>
            <button
              class="remove-btn btn btn-sm btn-outline-danger"
              type="button"
            >
              <fa-icon
                class="fa-sm"
              />
            </button>
          </td>
          
          
        </tr>
        <tr
          class="trs-calculation-row w-100 faux-title"
        >
          <td
            class="summary"
            pfstatementgraphicsdirective=""
          >
            <pf-string-editor>
              
              <span
                class="wrapper w-100 d-inline-block"
              >
                <input
                  class="input-text w-100 offScreen"
                  maxlength="30"
                  minlength="1"
                  placeholder=""
                  tabindex="-1"
                  type="text"
                />
                
                <a
                  class="editable d-flex show-icon-on-hover"
                  href="javascript:void(0)"
                >
                  <span
                    class="edit-text d-inline-block mw-100"
                  >
                    
                  </span>
                  <span
                    class="edit-icon position-relative"
                  >
                    <fa-icon
                      aria-hidden="true"
                      class="fa-xs ml-2"
                    />
                  </span>
                </a>
              </span>
              
            </pf-string-editor>
          </td>
          <td
            class="contribution-field summary text-right"
          >
            
            <pf-compensation-value-placeholder />
          </td>
          
          <td />
        </tr>
      </tbody>
    </table>
    
    
  </div>
</pf-trs-calculation-control>
`;
